Test Org - Speridian/src/objects/BA_Notification__c.object
<CustomObject>
    <fields>
        <fullName>ba_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ba_CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notifications (Group)</relationshipLabel>
        <relationshipName>Notifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Notifications</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>